<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".Main2Activity">

    <LinearLayout style="@style/LinearLayoutStyle">

        <TextView
            style="@style/TextStyle"
            android:padding="30dp"
            android:text="@string/choose" />

        <TextView
            style="@style/TextStyle"
            android:gravity="start"
            android:text="@string/question_1" />


        <RadioGroup
            android:id="@+id/ques_1"
            style="@style/RadioGroupStyle">

            <RadioButton
                android:id="@+id/a1"
                style="@style/RadioButtonStyle"
                android:text="@string/answer_1_a" />

            <RadioButton
                android:id="@+id/b1"
                style="@style/RadioButtonStyle"
                android:text="@string/answer_1_b" />

            <RadioButton
                android:id="@+id/c1"
                style="@style/RadioButtonStyle"
                android:text="@string/answer_1_c" />

            <RadioButton
                android:id="@+id/d1"
                style="@style/RadioButtonStyle"
                android:text="@string/answer_1_d" />
        </RadioGroup>

        <TextView
            style="@style/TextStyle"
            android:gravity="start"
            android:text="@string/question_2" />


        <RadioGroup
            android:id="@+id/ques_2"
            style="@style/RadioGroupStyle">

            <RadioButton
                android:id="@+id/a2"
                style="@style/RadioButtonStyle"
                android:text="@string/answer_2_a" />

            <RadioButton
                android:id="@+id/b2"
                style="@style/RadioButtonStyle"
                android:text="@string/answer_2_b" />

            <RadioButton
                android:id="@+id/c2"
                style="@style/RadioButtonStyle"
                android:text="@string/answer_2_c" />

            <RadioButton
                android:id="@+id/d2"
                style="@style/RadioButtonStyle"
                android:text="@string/answer_2_d" />
        </RadioGroup>

        <TextView
            style="@style/TextStyle"
            android:gravity="start"
            android:text="@string/question_3" />


        <RadioGroup
            android:id="@+id/ques_3"
            style="@style/RadioGroupStyle">

            <RadioButton
                android:id="@+id/a3"
                style="@style/RadioButtonStyle"
                android:text="@string/answer_3_a" />

            <RadioButton
                android:id="@+id/b3"
                style="@style/RadioButtonStyle"
                android:text="@string/answer_3_b" />

            <RadioButton
                android:id="@+id/c3"
                style="@style/RadioButtonStyle"
                android:text="@string/answer_3_c" />

        </RadioGroup>

        <TextView
            style="@style/TextStyle"
            android:gravity="start"
            android:text="@string/question_4" />


        <RadioGroup
            android:id="@+id/ques_4"
            style="@style/RadioGroupStyle">

            <RadioButton
                android:id="@+id/a4"
                style="@style/RadioButtonStyle"
                android:text="@string/answer_4_a" />

            <RadioButton
                android:id="@+id/b4"
                style="@style/RadioButtonStyle"
                android:text="@string/answer_4_b" />

            <RadioButton
                android:id="@+id/c4"
                style="@style/RadioButtonStyle"
                android:text="@string/answer_4_c" />

            <RadioButton
                android:id="@+id/d4"
                style="@style/RadioButtonStyle"
                android:text="@string/answer_4_d" />

        </RadioGroup>

        <TextView
            style="@style/TextStyle"
            android:gravity="start"
            android:text="@string/question_5" />


        <RadioGroup
            android:id="@+id/ques_5"
            style="@style/RadioGroupStyle">

            <RadioButton
                android:id="@+id/a5"
                style="@style/RadioButtonStyle"
                android:text="@string/answer_5_a" />

            <RadioButton
                android:id="@+id/b5"
                style="@style/RadioButtonStyle"
                android:text="@string/answer_5_b" />

            <RadioButton
                android:id="@+id/c5"
                style="@style/RadioButtonStyle"
                android:text="@string/answer_5_c" />

            <RadioButton
                android:id="@+id/d5"
                style="@style/RadioButtonStyle"
                android:text="@string/answer_5_d" />

        </RadioGroup>

        <TextView
            style="@style/TextStyle"
            android:gravity="start"
            android:text="@string/question_6" />


        <RadioGroup
            android:id="@+id/ques_6"
            style="@style/RadioGroupStyle">

            <RadioButton
                android:id="@+id/a6"
                style="@style/RadioButtonStyle"
                android:text="@string/answer_6_a" />

            <RadioButton
                android:id="@+id/b6"
                style="@style/RadioButtonStyle"
                android:text="@string/answer_6_b" />

            <RadioButton
                android:id="@+id/c6"
                style="@style/RadioButtonStyle"
                android:text="@string/answer_6_c" />


        </RadioGroup>


        <TextView
            style="@style/TextStyle"
            android:gravity="start"
            android:text="@string/question_7" />


        <RadioGroup
            android:id="@+id/ques_7"
            style="@style/RadioGroupStyle">

            <RadioButton
                android:id="@+id/a7"
                style="@style/RadioButtonStyle"
                android:text="@string/answer_7_a" />

            <RadioButton
                android:id="@+id/b7"
                style="@style/RadioButtonStyle"
                android:text="@string/answer_7_b" />

            <RadioButton
                android:id="@+id/c7"
                style="@style/RadioButtonStyle"
                android:text="@string/answer_7_c" />

            <RadioButton
                android:id="@+id/d7"
                style="@style/RadioButtonStyle"
                android:text="@string/answer_7_d" />

        </RadioGroup>

        <TextView
            style="@style/TextStyle"
            android:gravity="start"
            android:text="@string/question_8" />


        <RadioGroup
            android:id="@+id/ques_8"
            style="@style/RadioGroupStyle">

            <RadioButton
                android:id="@+id/a8"
                style="@style/RadioButtonStyle"
                android:text="@string/answer_8_a" />

            <RadioButton
                android:id="@+id/b8"
                style="@style/RadioButtonStyle"
                android:text="@string/answer_8_b" />

            <RadioButton
                android:id="@+id/c8"
                style="@style/RadioButtonStyle"
                android:text="@string/answer_8_c" />

            <RadioButton
                android:id="@+id/d8"
                style="@style/RadioButtonStyle"
                android:text="@string/answer_8_d" />

        </RadioGroup>

        <TextView
            style="@style/TextStyle"
            android:gravity="start"
            android:text="@string/question_9" />


        <RadioGroup
            android:id="@+id/ques_9"
            style="@style/RadioGroupStyle">

            <RadioButton
                android:id="@+id/a9"
                style="@style/RadioButtonStyle"
                android:text="@string/answer_9_a" />

            <RadioButton
                android:id="@+id/b9"
                style="@style/RadioButtonStyle"
                android:text="@string/answer_9_b" />

            <RadioButton
                android:id="@+id/c9"
                style="@style/RadioButtonStyle"
                android:text="@string/answer_9_c" />

        </RadioGroup>

        <TextView
            style="@style/TextStyle"
            android:gravity="start"
            android:text="@string/question_10" />


        <RadioGroup
            android:id="@+id/ques_10"
            style="@style/RadioGroupStyle">

            <RadioButton
                android:id="@+id/a10"
                style="@style/RadioButtonStyle"
                android:text="@string/answer_10_a" />

            <RadioButton
                android:id="@+id/b10"
                style="@style/RadioButtonStyle"
                android:text="@string/answer_10_b" />

            <RadioButton
                android:id="@+id/c10"
                style="@style/RadioButtonStyle"
                android:text="@string/answer_10_c" />

            <RadioButton
                android:id="@+id/d10"
                style="@style/RadioButtonStyle"
                android:text="@string/answer_10_d" />

        </RadioGroup>

        <TextView
            android:id="@+id/score_calculator"
            style="@style/TextStyle"
            android:gravity="start"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            android:text="@string/score"
            android:textSize="20sp" />

        <Button
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:onClick="submitScore"
            android:text="@string/submit" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="#512DA8"
            android:gravity="center"
            android:onClick="emailIntent"
            android:text="@string/email"
            android:textColor="#FFFFFF" />

    </LinearLayout>


</ScrollView>
